Projeto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     empty -> <empty>
Rule 2     S -> PROGRAM ID SEMICOLON FDECLS B DOT
Rule 3     FDECLS -> FDECLS FUNCTION_DECL
Rule 4     FDECLS -> FDECLS PROCEDURE_DECL
Rule 5     FDECLS -> empty
Rule 6     FUNCTION_DECL -> FUNCTION ID PA FPARAMS PF DOUBLEDOT TIPO SEMICOLON FBLOCK
Rule 7     PROCEDURE_DECL -> PROCEDURE ID PA FPARAMS PF SEMICOLON FBLOCK
Rule 8     PROCEDURE_DECL -> PROCEDURE ID SEMICOLON FBLOCK
Rule 9     FPARAMS -> PARAM_LIST
Rule 10    FPARAMS -> empty
Rule 11    PARAM_LIST -> PARAM_LIST COMMA PARAM
Rule 12    PARAM_LIST -> PARAM
Rule 13    PARAM -> ID DOUBLEDOT TIPO
Rule 14    FBLOCK -> VAR DL BEGIN CL END SEMICOLON
Rule 15    FBLOCK -> BEGIN CL END SEMICOLON
Rule 16    B -> VAR DL BEGIN CL END
Rule 17    B -> BEGIN CL END
Rule 18    DL -> DL SEMICOLON D
Rule 19    DL -> D
Rule 20    D -> VL DOUBLEDOT TIPO
Rule 21    D -> empty
Rule 22    TIPO -> BASE_TIPO
Rule 23    TIPO -> ARRAY_TIPO
Rule 24    BASE_TIPO -> INTEGER
Rule 25    BASE_TIPO -> BOOLEAN
Rule 26    BASE_TIPO -> STRING
Rule 27    BASE_TIPO -> REAL
Rule 28    BASE_TIPO -> CHAR
Rule 29    INDEX -> NUMS
Rule 30    INDEX -> MINUS NUMS
Rule 31    INDEX -> INDEX MINUS NUMS
Rule 32    INDEX -> INDEX PLUS NUMS
Rule 33    INDEX -> INDEX MULT NUMS
Rule 34    INDEX -> INDEX DIV NUMS
Rule 35    INDEX -> INDEX MOD NUMS
Rule 36    ARRAY_TIPO -> ARRAY PRA INDEX RANGE INDEX PRF OF BASE_TIPO
Rule 37    VL -> VL COMMA ID
Rule 38    VL -> ID
Rule 39    CL -> CL SEMICOLON C
Rule 40    CL -> C
Rule 41    Call -> ID PA AL PF
Rule 42    Call -> ID
Rule 43    C -> matched
Rule 44    C -> unmatched
Rule 45    matched -> IF E THEN matched ELSE matched
Rule 46    matched -> CC
Rule 47    unmatched -> IF E THEN C
Rule 48    unmatched -> IF E THEN matched ELSE unmatched
Rule 49    Repeat -> REPEAT C UNTIL E SEMICOLON
Rule 50    Write -> WRITELN PA AL PF
Rule 51    Read -> READLN PA LVALUE_LIST PF
Rule 52    LVALUE_LIST -> LVALUE_LIST COMMA LVALUE
Rule 53    LVALUE_LIST -> LVALUE
Rule 54    Assign -> LVALUE DOTEDEQUALS E
Rule 55    For -> FOR ID DOTEDEQUALS E FORDIR E DO C
Rule 56    FORDIR -> TO
Rule 57    FORDIR -> DOWNTO
Rule 58    While -> WHILE E DO C
Rule 59    CC -> Write
Rule 60    CC -> Read
Rule 61    CC -> Assign
Rule 62    CC -> For
Rule 63    CC -> While
Rule 64    CC -> Call
Rule 65    CC -> Repeat
Rule 66    CC -> BEGIN CL END
Rule 67    CC -> empty
Rule 68    LVALUE -> LVALUE PRA E PRF
Rule 69    LVALUE -> ID
Rule 70    AL -> AL COMMA E
Rule 71    AL -> E
Rule 72    E -> E OR E1
Rule 73    E -> E1
Rule 74    E1 -> E1 AND E2
Rule 75    E1 -> E2
Rule 76    E2 -> A MENOR A
Rule 77    E2 -> A MAIOR A
Rule 78    E2 -> A MAIORIGUAL A
Rule 79    E2 -> A MENORIGUAL A
Rule 80    E2 -> A DIFERENTE A
Rule 81    E2 -> A EQUALS A
Rule 82    E2 -> A
Rule 83    A -> A PLUS T
Rule 84    A -> A MINUS T
Rule 85    A -> T
Rule 86    T -> T MULT F
Rule 87    T -> T DIV F
Rule 88    T -> T MOD F
Rule 89    T -> F
Rule 90    F -> ID PA AL PF
Rule 91    F -> LVALUE
Rule 92    F -> NUMS
Rule 93    F -> NUM_REAL
Rule 94    F -> STRINGS
Rule 95    F -> PA E PF
Rule 96    F -> TRUE
Rule 97    F -> FALSE
Rule 98    F -> NOT F
Rule 99    F -> MINUS F
Rule 100   F -> PLUS F

Terminals, with rules where they appear

AND                  : 74
ARRAY                : 36
BEGIN                : 14 15 16 17 66
BOOLEAN              : 25
CHAR                 : 28
COMMA                : 11 37 52 70
DIFERENTE            : 80
DIV                  : 34 87
DO                   : 55 58
DOT                  : 2
DOTEDEQUALS          : 54 55
DOUBLEDOT            : 6 13 20
DOWNTO               : 57
ELSE                 : 45 48
END                  : 14 15 16 17 66
EQUALS               : 81
FALSE                : 97
FOR                  : 55
FUNCTION             : 6
ID                   : 2 6 7 8 13 37 38 41 42 55 69 90
IF                   : 45 47 48
INTEGER              : 24
MAIOR                : 77
MAIORIGUAL           : 78
MENOR                : 76
MENORIGUAL           : 79
MINUS                : 30 31 84 99
MOD                  : 35 88
MULT                 : 33 86
NOT                  : 98
NUMS                 : 29 30 31 32 33 34 35 92
NUM_REAL             : 93
OF                   : 36
OR                   : 72
PA                   : 6 7 41 50 51 90 95
PF                   : 6 7 41 50 51 90 95
PLUS                 : 32 83 100
PRA                  : 36 68
PRF                  : 36 68
PROCEDURE            : 7 8
PROGRAM              : 2
RANGE                : 36
READLN               : 51
REAL                 : 27
REPEAT               : 49
SEMICOLON            : 2 6 7 8 14 15 18 39 49
STRING               : 26
STRINGS              : 94
THEN                 : 45 47 48
TO                   : 56
TRUE                 : 96
UNTIL                : 49
VAR                  : 14 16
WHILE                : 58
WRITELN              : 50
error                : 

Nonterminals, with rules where they appear

A                    : 76 76 77 77 78 78 79 79 80 80 81 81 82 83 84
AL                   : 41 50 70 90
ARRAY_TIPO           : 23
Assign               : 61
B                    : 2
BASE_TIPO            : 22 36
C                    : 39 40 47 49 55 58
CC                   : 46
CL                   : 14 15 16 17 39 66
Call                 : 64
D                    : 18 19
DL                   : 14 16 18
E                    : 45 47 48 49 54 55 55 58 68 70 71 72 95
E1                   : 72 73 74
E2                   : 74 75
F                    : 86 87 88 89 98 99 100
FBLOCK               : 6 7 8
FDECLS               : 2 3 4
FORDIR               : 55
FPARAMS              : 6 7
FUNCTION_DECL        : 3
For                  : 62
INDEX                : 31 32 33 34 35 36 36
LVALUE               : 52 53 54 68 91
LVALUE_LIST          : 51 52
PARAM                : 11 12
PARAM_LIST           : 9 11
PROCEDURE_DECL       : 4
Read                 : 60
Repeat               : 65
S                    : 0
T                    : 83 84 85 86 87 88
TIPO                 : 6 13 20
VL                   : 20 37
While                : 63
Write                : 59
empty                : 5 10 21 67
matched              : 43 45 45 48
unmatched            : 44 48

Parsing method: LALR

state 0

    (0) S' -> . S
    (2) S -> . PROGRAM ID SEMICOLON FDECLS B DOT

    PROGRAM         shift and go to state 2

    S                              shift and go to state 1

state 1

    (0) S' -> S .



state 2

    (2) S -> PROGRAM . ID SEMICOLON FDECLS B DOT

    ID              shift and go to state 3


state 3

    (2) S -> PROGRAM ID . SEMICOLON FDECLS B DOT

    SEMICOLON       shift and go to state 4


state 4

    (2) S -> PROGRAM ID SEMICOLON . FDECLS B DOT
    (3) FDECLS -> . FDECLS FUNCTION_DECL
    (4) FDECLS -> . FDECLS PROCEDURE_DECL
    (5) FDECLS -> . empty
    (1) empty -> .

    VAR             reduce using rule 1 (empty -> .)
    BEGIN           reduce using rule 1 (empty -> .)
    FUNCTION        reduce using rule 1 (empty -> .)
    PROCEDURE       reduce using rule 1 (empty -> .)

    FDECLS                         shift and go to state 5
    empty                          shift and go to state 6

state 5

    (2) S -> PROGRAM ID SEMICOLON FDECLS . B DOT
    (3) FDECLS -> FDECLS . FUNCTION_DECL
    (4) FDECLS -> FDECLS . PROCEDURE_DECL
    (16) B -> . VAR DL BEGIN CL END
    (17) B -> . BEGIN CL END
    (6) FUNCTION_DECL -> . FUNCTION ID PA FPARAMS PF DOUBLEDOT TIPO SEMICOLON FBLOCK
    (7) PROCEDURE_DECL -> . PROCEDURE ID PA FPARAMS PF SEMICOLON FBLOCK
    (8) PROCEDURE_DECL -> . PROCEDURE ID SEMICOLON FBLOCK

    VAR             shift and go to state 10
    BEGIN           shift and go to state 11
    FUNCTION        shift and go to state 12
    PROCEDURE       shift and go to state 13

    B                              shift and go to state 7
    FUNCTION_DECL                  shift and go to state 8
    PROCEDURE_DECL                 shift and go to state 9

state 6

    (5) FDECLS -> empty .

    VAR             reduce using rule 5 (FDECLS -> empty .)
    BEGIN           reduce using rule 5 (FDECLS -> empty .)
    FUNCTION        reduce using rule 5 (FDECLS -> empty .)
    PROCEDURE       reduce using rule 5 (FDECLS -> empty .)


state 7

    (2) S -> PROGRAM ID SEMICOLON FDECLS B . DOT

    DOT             shift and go to state 14


state 8

    (3) FDECLS -> FDECLS FUNCTION_DECL .

    VAR             reduce using rule 3 (FDECLS -> FDECLS FUNCTION_DECL .)
    BEGIN           reduce using rule 3 (FDECLS -> FDECLS FUNCTION_DECL .)
    FUNCTION        reduce using rule 3 (FDECLS -> FDECLS FUNCTION_DECL .)
    PROCEDURE       reduce using rule 3 (FDECLS -> FDECLS FUNCTION_DECL .)


state 9

    (4) FDECLS -> FDECLS PROCEDURE_DECL .

    VAR             reduce using rule 4 (FDECLS -> FDECLS PROCEDURE_DECL .)
    BEGIN           reduce using rule 4 (FDECLS -> FDECLS PROCEDURE_DECL .)
    FUNCTION        reduce using rule 4 (FDECLS -> FDECLS PROCEDURE_DECL .)
    PROCEDURE       reduce using rule 4 (FDECLS -> FDECLS PROCEDURE_DECL .)


state 10

    (16) B -> VAR . DL BEGIN CL END
    (18) DL -> . DL SEMICOLON D
    (19) DL -> . D
    (20) D -> . VL DOUBLEDOT TIPO
    (21) D -> . empty
    (37) VL -> . VL COMMA ID
    (38) VL -> . ID
    (1) empty -> .

    ID              shift and go to state 19
    BEGIN           reduce using rule 1 (empty -> .)
    SEMICOLON       reduce using rule 1 (empty -> .)

    DL                             shift and go to state 15
    D                              shift and go to state 16
    VL                             shift and go to state 17
    empty                          shift and go to state 18

state 11

    (17) B -> BEGIN . CL END
    (39) CL -> . CL SEMICOLON C
    (40) CL -> . C
    (43) C -> . matched
    (44) C -> . unmatched
    (45) matched -> . IF E THEN matched ELSE matched
    (46) matched -> . CC
    (47) unmatched -> . IF E THEN C
    (48) unmatched -> . IF E THEN matched ELSE unmatched
    (59) CC -> . Write
    (60) CC -> . Read
    (61) CC -> . Assign
    (62) CC -> . For
    (63) CC -> . While
    (64) CC -> . Call
    (65) CC -> . Repeat
    (66) CC -> . BEGIN CL END
    (67) CC -> . empty
    (50) Write -> . WRITELN PA AL PF
    (51) Read -> . READLN PA LVALUE_LIST PF
    (54) Assign -> . LVALUE DOTEDEQUALS E
    (55) For -> . FOR ID DOTEDEQUALS E FORDIR E DO C
    (58) While -> . WHILE E DO C
    (41) Call -> . ID PA AL PF
    (42) Call -> . ID
    (49) Repeat -> . REPEAT C UNTIL E SEMICOLON
    (1) empty -> .
    (68) LVALUE -> . LVALUE PRA E PRF
    (69) LVALUE -> . ID

    IF              shift and go to state 25
    BEGIN           shift and go to state 20
    WRITELN         shift and go to state 35
    READLN          shift and go to state 36
    FOR             shift and go to state 38
    WHILE           shift and go to state 40
    ID              shift and go to state 39
    REPEAT          shift and go to state 41
    END             reduce using rule 1 (empty -> .)
    SEMICOLON       reduce using rule 1 (empty -> .)

    CL                             shift and go to state 21
    C                              shift and go to state 22
    matched                        shift and go to state 23
    unmatched                      shift and go to state 24
    CC                             shift and go to state 26
    Write                          shift and go to state 27
    Read                           shift and go to state 28
    Assign                         shift and go to state 29
    For                            shift and go to state 30
    While                          shift and go to state 31
    Call                           shift and go to state 32
    Repeat                         shift and go to state 33
    empty                          shift and go to state 34
    LVALUE                         shift and go to state 37

state 12

    (6) FUNCTION_DECL -> FUNCTION . ID PA FPARAMS PF DOUBLEDOT TIPO SEMICOLON FBLOCK

    ID              shift and go to state 42


state 13

    (7) PROCEDURE_DECL -> PROCEDURE . ID PA FPARAMS PF SEMICOLON FBLOCK
    (8) PROCEDURE_DECL -> PROCEDURE . ID SEMICOLON FBLOCK

    ID              shift and go to state 43


state 14

    (2) S -> PROGRAM ID SEMICOLON FDECLS B DOT .

    $end            reduce using rule 2 (S -> PROGRAM ID SEMICOLON FDECLS B DOT .)


state 15

    (16) B -> VAR DL . BEGIN CL END
    (18) DL -> DL . SEMICOLON D

    BEGIN           shift and go to state 44
    SEMICOLON       shift and go to state 45


state 16

    (19) DL -> D .

    BEGIN           reduce using rule 19 (DL -> D .)
    SEMICOLON       reduce using rule 19 (DL -> D .)


state 17

    (20) D -> VL . DOUBLEDOT TIPO
    (37) VL -> VL . COMMA ID

    DOUBLEDOT       shift and go to state 46
    COMMA           shift and go to state 47


state 18

    (21) D -> empty .

    BEGIN           reduce using rule 21 (D -> empty .)
    SEMICOLON       reduce using rule 21 (D -> empty .)


state 19

    (38) VL -> ID .

    DOUBLEDOT       reduce using rule 38 (VL -> ID .)
    COMMA           reduce using rule 38 (VL -> ID .)


state 20

    (66) CC -> BEGIN . CL END
    (39) CL -> . CL SEMICOLON C
    (40) CL -> . C
    (43) C -> . matched
    (44) C -> . unmatched
    (45) matched -> . IF E THEN matched ELSE matched
    (46) matched -> . CC
    (47) unmatched -> . IF E THEN C
    (48) unmatched -> . IF E THEN matched ELSE unmatched
    (59) CC -> . Write
    (60) CC -> . Read
    (61) CC -> . Assign
    (62) CC -> . For
    (63) CC -> . While
    (64) CC -> . Call
    (65) CC -> . Repeat
    (66) CC -> . BEGIN CL END
    (67) CC -> . empty
    (50) Write -> . WRITELN PA AL PF
    (51) Read -> . READLN PA LVALUE_LIST PF
    (54) Assign -> . LVALUE DOTEDEQUALS E
    (55) For -> . FOR ID DOTEDEQUALS E FORDIR E DO C
    (58) While -> . WHILE E DO C
    (41) Call -> . ID PA AL PF
    (42) Call -> . ID
    (49) Repeat -> . REPEAT C UNTIL E SEMICOLON
    (1) empty -> .
    (68) LVALUE -> . LVALUE PRA E PRF
    (69) LVALUE -> . ID

    IF              shift and go to state 25
    BEGIN           shift and go to state 20
    WRITELN         shift and go to state 35
    READLN          shift and go to state 36
    FOR             shift and go to state 38
    WHILE           shift and go to state 40
    ID              shift and go to state 39
    REPEAT          shift and go to state 41
    END             reduce using rule 1 (empty -> .)
    SEMICOLON       reduce using rule 1 (empty -> .)

    CL                             shift and go to state 48
    C                              shift and go to state 22
    matched                        shift and go to state 23
    unmatched                      shift and go to state 24
    CC                             shift and go to state 26
    Write                          shift and go to state 27
    Read                           shift and go to state 28
    Assign                         shift and go to state 29
    For                            shift and go to state 30
    While                          shift and go to state 31
    Call                           shift and go to state 32
    Repeat                         shift and go to state 33
    empty                          shift and go to state 34
    LVALUE                         shift and go to state 37

state 21

    (17) B -> BEGIN CL . END
    (39) CL -> CL . SEMICOLON C

    END             shift and go to state 49
    SEMICOLON       shift and go to state 50


state 22

    (40) CL -> C .

    END             reduce using rule 40 (CL -> C .)
    SEMICOLON       reduce using rule 40 (CL -> C .)


state 23

    (43) C -> matched .

    END             reduce using rule 43 (C -> matched .)
    SEMICOLON       reduce using rule 43 (C -> matched .)
    UNTIL           reduce using rule 43 (C -> matched .)
    ELSE            reduce using rule 43 (C -> matched .)


state 24

    (44) C -> unmatched .

    END             reduce using rule 44 (C -> unmatched .)
    SEMICOLON       reduce using rule 44 (C -> unmatched .)
    UNTIL           reduce using rule 44 (C -> unmatched .)
    ELSE            reduce using rule 44 (C -> unmatched .)


state 25

    (45) matched -> IF . E THEN matched ELSE matched
    (47) unmatched -> IF . E THEN C
    (48) unmatched -> IF . E THEN matched ELSE unmatched
    (72) E -> . E OR E1
    (73) E -> . E1
    (74) E1 -> . E1 AND E2
    (75) E1 -> . E2
    (76) E2 -> . A MENOR A
    (77) E2 -> . A MAIOR A
    (78) E2 -> . A MAIORIGUAL A
    (79) E2 -> . A MENORIGUAL A
    (80) E2 -> . A DIFERENTE A
    (81) E2 -> . A EQUALS A
    (82) E2 -> . A
    (83) A -> . A PLUS T
    (84) A -> . A MINUS T
    (85) A -> . T
    (86) T -> . T MULT F
    (87) T -> . T DIV F
    (88) T -> . T MOD F
    (89) T -> . F
    (90) F -> . ID PA AL PF
    (91) F -> . LVALUE
    (92) F -> . NUMS
    (93) F -> . NUM_REAL
    (94) F -> . STRINGS
    (95) F -> . PA E PF
    (96) F -> . TRUE
    (97) F -> . FALSE
    (98) F -> . NOT F
    (99) F -> . MINUS F
    (100) F -> . PLUS F
    (68) LVALUE -> . LVALUE PRA E PRF
    (69) LVALUE -> . ID

    ID              shift and go to state 59
    NUMS            shift and go to state 62
    NUM_REAL        shift and go to state 63
    STRINGS         shift and go to state 64
    PA              shift and go to state 60
    TRUE            shift and go to state 65
    FALSE           shift and go to state 66
    NOT             shift and go to state 67
    MINUS           shift and go to state 57
    PLUS            shift and go to state 55

    E                              shift and go to state 51
    E1                             shift and go to state 52
    E2                             shift and go to state 53
    A                              shift and go to state 54
    T                              shift and go to state 56
    F                              shift and go to state 58
    LVALUE                         shift and go to state 61

state 26

    (46) matched -> CC .

    END             reduce using rule 46 (matched -> CC .)
    SEMICOLON       reduce using rule 46 (matched -> CC .)
    UNTIL           reduce using rule 46 (matched -> CC .)
    ELSE            reduce using rule 46 (matched -> CC .)


state 27

    (59) CC -> Write .

    END             reduce using rule 59 (CC -> Write .)
    SEMICOLON       reduce using rule 59 (CC -> Write .)
    UNTIL           reduce using rule 59 (CC -> Write .)
    ELSE            reduce using rule 59 (CC -> Write .)


state 28

    (60) CC -> Read .

    END             reduce using rule 60 (CC -> Read .)
    SEMICOLON       reduce using rule 60 (CC -> Read .)
    UNTIL           reduce using rule 60 (CC -> Read .)
    ELSE            reduce using rule 60 (CC -> Read .)


state 29

    (61) CC -> Assign .

    END             reduce using rule 61 (CC -> Assign .)
    SEMICOLON       reduce using rule 61 (CC -> Assign .)
    UNTIL           reduce using rule 61 (CC -> Assign .)
    ELSE            reduce using rule 61 (CC -> Assign .)


state 30

    (62) CC -> For .

    END             reduce using rule 62 (CC -> For .)
    SEMICOLON       reduce using rule 62 (CC -> For .)
    UNTIL           reduce using rule 62 (CC -> For .)
    ELSE            reduce using rule 62 (CC -> For .)


state 31

    (63) CC -> While .

    END             reduce using rule 63 (CC -> While .)
    SEMICOLON       reduce using rule 63 (CC -> While .)
    UNTIL           reduce using rule 63 (CC -> While .)
    ELSE            reduce using rule 63 (CC -> While .)


state 32

    (64) CC -> Call .

    END             reduce using rule 64 (CC -> Call .)
    SEMICOLON       reduce using rule 64 (CC -> Call .)
    UNTIL           reduce using rule 64 (CC -> Call .)
    ELSE            reduce using rule 64 (CC -> Call .)


state 33

    (65) CC -> Repeat .

    END             reduce using rule 65 (CC -> Repeat .)
    SEMICOLON       reduce using rule 65 (CC -> Repeat .)
    UNTIL           reduce using rule 65 (CC -> Repeat .)
    ELSE            reduce using rule 65 (CC -> Repeat .)


state 34

    (67) CC -> empty .

    END             reduce using rule 67 (CC -> empty .)
    SEMICOLON       reduce using rule 67 (CC -> empty .)
    UNTIL           reduce using rule 67 (CC -> empty .)
    ELSE            reduce using rule 67 (CC -> empty .)


state 35

    (50) Write -> WRITELN . PA AL PF

    PA              shift and go to state 68


state 36

    (51) Read -> READLN . PA LVALUE_LIST PF

    PA              shift and go to state 69


state 37

    (54) Assign -> LVALUE . DOTEDEQUALS E
    (68) LVALUE -> LVALUE . PRA E PRF

    DOTEDEQUALS     shift and go to state 70
    PRA             shift and go to state 71


state 38

    (55) For -> FOR . ID DOTEDEQUALS E FORDIR E DO C

    ID              shift and go to state 72


state 39

    (41) Call -> ID . PA AL PF
    (42) Call -> ID .
    (69) LVALUE -> ID .

    PA              shift and go to state 73
    END             reduce using rule 42 (Call -> ID .)
    SEMICOLON       reduce using rule 42 (Call -> ID .)
    UNTIL           reduce using rule 42 (Call -> ID .)
    ELSE            reduce using rule 42 (Call -> ID .)
    DOTEDEQUALS     reduce using rule 69 (LVALUE -> ID .)
    PRA             reduce using rule 69 (LVALUE -> ID .)


state 40

    (58) While -> WHILE . E DO C
    (72) E -> . E OR E1
    (73) E -> . E1
    (74) E1 -> . E1 AND E2
    (75) E1 -> . E2
    (76) E2 -> . A MENOR A
    (77) E2 -> . A MAIOR A
    (78) E2 -> . A MAIORIGUAL A
    (79) E2 -> . A MENORIGUAL A
    (80) E2 -> . A DIFERENTE A
    (81) E2 -> . A EQUALS A
    (82) E2 -> . A
    (83) A -> . A PLUS T
    (84) A -> . A MINUS T
    (85) A -> . T
    (86) T -> . T MULT F
    (87) T -> . T DIV F
    (88) T -> . T MOD F
    (89) T -> . F
    (90) F -> . ID PA AL PF
    (91) F -> . LVALUE
    (92) F -> . NUMS
    (93) F -> . NUM_REAL
    (94) F -> . STRINGS
    (95) F -> . PA E PF
    (96) F -> . TRUE
    (97) F -> . FALSE
    (98) F -> . NOT F
    (99) F -> . MINUS F
    (100) F -> . PLUS F
    (68) LVALUE -> . LVALUE PRA E PRF
    (69) LVALUE -> . ID

    ID              shift and go to state 59
    NUMS            shift and go to state 62
    NUM_REAL        shift and go to state 63
    STRINGS         shift and go to state 64
    PA              shift and go to state 60
    TRUE            shift and go to state 65
    FALSE           shift and go to state 66
    NOT             shift and go to state 67
    MINUS           shift and go to state 57
    PLUS            shift and go to state 55

    E                              shift and go to state 74
    E1                             shift and go to state 52
    E2                             shift and go to state 53
    A                              shift and go to state 54
    T                              shift and go to state 56
    F                              shift and go to state 58
    LVALUE                         shift and go to state 61

state 41
